src-tauri/src/snapshots/agaric_lib__pagination__tests__snapshot_history_entry_response.snap
---
source: src/pagination.rs
assertion_line: 1893
expression: resp
---
items:
  - device_id: snap-device
    seq: 1
    op_type: create_block
    payload: "{\"block_id\":\"SNAP_HIS\",\"block_type\":\"content\",\"content\":\"snap\"}"
    created_at: "2025-06-15T12:00:00Z"
next_cursor: ~
has_more: false
