src-tauri/src/snapshots/agaric_lib__pagination__tests__snapshot_page_response_list_children.snap
---
source: src/pagination.rs
expression: resp
---
items:
  - id: SNAP_CH1
    block_type: content
    content: first child
    parent_id: SNAP_PAR
    position: 1
    deleted_at: ~
    archived_at: ~
    is_conflict: false
    conflict_type: ~
    todo_state: ~
    priority: ~
    due_date: ~
  - id: SNAP_CH2
    block_type: content
    content: second child
    parent_id: SNAP_PAR
    position: 2
    deleted_at: ~
    archived_at: ~
    is_conflict: false
    conflict_type: ~
    todo_state: ~
    priority: ~
    due_date: ~
next_cursor: ~
has_more: false
