src-tauri/src/snapshots/agaric_lib__pagination__tests__snapshot_page_response_with_cursor.snap
---
source: src/pagination.rs
expression: resp
---
items:
  - id: SNAP_C01
    block_type: content
    content: child 1
    parent_id: SNAP_PAR2
    position: 1
    deleted_at: ~
    archived_at: ~
    is_conflict: false
    conflict_type: ~
    todo_state: ~
    priority: ~
    due_date: ~
  - id: SNAP_C02
    block_type: content
    content: child 2
    parent_id: SNAP_PAR2
    position: 2
    deleted_at: ~
    archived_at: ~
    is_conflict: false
    conflict_type: ~
    todo_state: ~
    priority: ~
    due_date: ~
next_cursor: "[CURSOR]"
has_more: true
